--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run translation
         env:
           GITHUB_TOKEN: ${{ secrets.GTK }}
-        run: python core/translate.py
+        run: python core/translator.py
 
       - name: Push to GitHub
         env:
