--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,8 @@
 name: "generate-readme-localed-files"
 description: "Generates localised readme files for your git"
 author: "mrf0rtuna4"
-color: "orange"
-icon: "bar-chart"
+color: orange
+icon: bar-chart
 inputs:
   langs:
     description: "Comma-separated list of languages to generate"
