--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: Generates localised readme files for your git
 author: mrf0rtuna4
 runs:
   using: 'docker'
-  image: 'python:3.8'
+  image: 'docker://python:3.8'
   entrypoint: /bin/sh
   args:
     - -c
