--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,6 +27,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: translations
-          build_dir: dist
+          build_dir: build
         env:
           GITHUB_TOKEN: ${{ secrets.GTK }}
