--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -1,10 +1,11 @@
-name: Translate README
+name: Generate Localized Readme
+
 on:
   schedule:
-    - cron: '0 */2124 * * *'
-  
+    - cron: "0 */24 * * *"
+
   workflow_dispatch:
-  
+
   push:
     branches:
     - master
@@ -12,26 +13,15 @@ on:
 jobs:
   translate:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
       - name: Run translation
+        uses: mrf0rtuna4/Github-Readme-AutoTranslator@master
         env:
           GITHUB_TOKEN: ${{ secrets.GTK }}
-          LANGS: 'serbian, italian, kazakh, russian'
-        run: python core/translator.py
+          LANGS: 'serbian,italian,english'
 
       - name: Push to GitHub
         uses: crazy-max/ghaction-github-pages@v3.1.0
