Ручками строим dist

--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -23,6 +23,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GTK }}
           LANGS: 'serbian,italian,english'
 
+      - name: Create dist directory
+        run: mkdir dist
+
       - name: Copy files to dist
         run: cp -r $GITHUB_WORKSPACE/*.md dist/
 
