--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -28,6 +28,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: translations
-          build_dir: ${{ env.DIST }}
+          build_dir: 'dist'
         env:
           GITHUB_TOKEN: ${{ secrets.GTK }}
