--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
-name: Generate Localized Readme's
+name: Generate Localized Readme
+icon: battery-charging
 description: Generates localised readme files for your git
 author: mrf0rtuna4
 runs:
