--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Push to GitHub
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: translations
+          target_branch: translations_indev
           build_dir: 'dist'
         env:
           GITHUB_TOKEN: ${{ secrets.GTK }}
