--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,4 +1,4 @@
-name: Generate Localized Readme
+name: Generate Localized File
 
 on:
   workflow_dispatch:
@@ -18,11 +18,12 @@ jobs:
         uses: mrf0rtuna4/Github-Readme-AutoTranslator@master
         env:
           LANGS: 'ru, ar, uk, it, ja'
+          FILES: 'README.md'
 
       - name: Push to GitHub
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: translations_indev
+          target_branch: translations_indev_ver2
           build_dir: 'dist'
         env:
           GITHUB_TOKEN: ${{ secrets.GTK }}
